新增-传感器参数缓存